# Wait View Add - API M    lotteria/lotteria.xcodeproj/project.pbxproj M    lotteria/Classes/Help/HelpViewController.h M    lotteria/Classes/ShipSearch/ShipSearchViewController.m A    lotteria/Classes/WaitViewController.h M    lotteria/Classes/MapBody/MapSearchDetailView.xib M    lotteria/Classes/MapBody/MapSearchViewController.m A    lotteria/Classes/WaitViewController.m M    lotteria/Classes/MyPageBody/LoginViewController.m M    lotteria/Classes/MyPageBody/MypageBodyViewController.m M    lotteria/Classes/MyPageBody/LoginViewController.h M    lotteria/Classes/lotteriaAppDelegate.h M    lotteria/Classes/CartBody/CartOrderShopMenuViewController.m M    lotteria/Classes/CartBody/OrderViewController.m M    lotteria/Classes/CartBody/OrderPriceViewController.h M    lotteria/Classes/CartBody/CartMyShippingListView.m M    lotteria/Classes/CartBody/OrderEndViewController.h M    lotteria/Classes/CartBody/OrderPriceViewController.m M    lotteria/Classes/CartBody/OrderEndViewController.m M    lotteria/Classes/MainViewController.h M    lotteria/Classes/lotteriaAppDelegate.m M    lotteria/Classes/MainViewController.m M    lotteria/baseClass/DataManager.m M    lotteria/baseClass/ViewManager.m M    lotteria/baseClass/HttpRequest.m M    lotteria/baseClass/DataManager.h M    lotteria/baseClass/ViewManager.h M    lotteria/baseClass/HttpRequest.h M    lotteria/TemplateCell/UITableViewCellTemplate.h D    lotteria/TemplateCell/OrderMoneyCell.xib M    lotteria/TemplateCell/UITableViewCellTemplate.m

--- a/lotteria/Classes/MapBody/MapSearchDetailView.xib
+++ b/lotteria/Classes/MapBody/MapSearchDetailView.xib
@@ -162,15 +162,16 @@
 							<integer value="0" key="IBUIAccessibilityTraits"/>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Label</string>
+						<string key="IBUIText">주소</string>
 						<reference key="IBUIFont" ref="467320643"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC41MjE1Njg2Mjc1IDAuMjgyMzUyOTQxMiAwLjEzMzMzMzMzMzMAA</bytes>
 						</object>
 						<reference key="IBUIHighlightedColor" ref="188479022"/>
-						<int key="IBUIBaselineAdjustment">1</int>
+						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUINumberOfLines">0</int>
 					</object>
 					<object class="IBUIImageView" id="908900311">
 						<reference key="NSNextResponder" ref="191373211"/>
