키보드에 취소 toolbar 추가 함.. 취소가 안되서 ..  몇가지 버그 수정

--- a/lotteria/Classes/MapBody/MapSearchDetailView.xib
+++ b/lotteria/Classes/MapBody/MapSearchDetailView.xib
@@ -45,7 +45,7 @@
 					<object class="IBUIImageView" id="969536484">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{53, 52}, {213, 86}}</string>
+						<string key="NSFrame">{{52, 44}, {213, 86}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -78,7 +78,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
 						<object class="NSFont" key="IBUIFont" id="467320643">
-							<string key="NSName">LucidaGrande</string>
+							<string key="NSName">H2gtrE</string>
 							<double key="NSSize">13</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -116,7 +116,7 @@
 					<object class="IBUILabel" id="348334713">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{114, 216}, {170, 114}}</string>
+						<string key="NSFrame">{{114, 213}, {170, 80}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -135,7 +135,7 @@
 						<reference key="IBUIHighlightedColor" ref="188479022"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<int key="IBUINumberOfLines">14</int>
+						<int key="IBUINumberOfLines">0</int>
 					</object>
 					<object class="IBUIImageView" id="908900311">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -189,25 +189,22 @@
 							<string key="NSResourceName">btn_phone_off.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="271360860">
+					<object class="IBUIImageView" id="766217860">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">256</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">4</int>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">bg_store_result_box.png</string>
 						</object>
 					</object>
-					<object class="IBUILabel" id="590741912">
+					<object class="IBUILabel" id="246301807">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{76, 11}, {210, 21}}</string>
+						<string key="NSFrame">{{75, 10}, {210, 19}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -215,11 +212,6 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">AppleGothic</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
-						</object>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4yNTA5ODAzOTIyIDAuMTMzMzMzMzMzMyAwAA</bytes>
@@ -305,9 +297,9 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">StoreName</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="590741912"/>
+						<reference key="destination" ref="246301807"/>
 					</object>
-					<int key="connectionID">23</int>
+					<int key="connectionID">27</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -324,8 +316,6 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="590741912"/>
-							<reference ref="969536484"/>
 							<reference ref="531445530"/>
 							<reference ref="30362638"/>
 							<reference ref="586267369"/>
@@ -333,7 +323,9 @@
 							<reference ref="908900311"/>
 							<reference ref="237531062"/>
 							<reference ref="467391504"/>
-							<reference ref="271360860"/>
+							<reference ref="766217860"/>
+							<reference ref="969536484"/>
+							<reference ref="246301807"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -347,11 +339,6 @@
 						<int key="objectID">-2</int>
 						<reference key="object" ref="975951072"/>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="590741912"/>
-						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
@@ -394,8 +381,13 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="271360860"/>
+						<int key="objectID">24</int>
+						<reference key="object" ref="766217860"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">26</int>
+						<reference key="object" ref="246301807"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</object>
@@ -416,8 +408,10 @@
 					<string>19.IBViewBoundsToFrameTransform</string>
 					<string>20.IBPluginDependency</string>
 					<string>20.IBViewBoundsToFrameTransform</string>
-					<string>25.IBViewBoundsToFrameTransform</string>
-					<string>5.IBPluginDependency</string>
+					<string>24.IBPluginDependency</string>
+					<string>24.IBViewBoundsToFrameTransform</string>
+					<string>26.IBPluginDependency</string>
+					<string>26.IBViewBoundsToFrameTransform</string>
 					<string>6.IBPluginDependency</string>
 					<string>6.IBViewBoundsToFrameTransform</string>
 					<string>7.IBPluginDependency</string>
@@ -431,7 +425,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>MapSearchDetailViewController</string>
 					<string>UIResponder</string>
-					<string>{{556, 296}, {320, 460}}</string>
+					<string>{{525, 205}, {320, 460}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -449,13 +443,17 @@
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAABC9gAAw7SAAA</bytes>
 					</object>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAwzkAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAADBcAAAwpgAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABCqAAAwdAAAA</bytes>
+					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABB6AAAwxAAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABCjgAAwxkAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -487,7 +485,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">27</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
